# object_detection

./: .gitignore  CMakeLists.txt
src/: main.cpp
